[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "Factory_Machine_Maintenance"
version = "1.0.0"
description = "Factory Machine Maintenance AI using Llama 3.1"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "gradio",
    "openai",
    "uvicorn",
]

[project.scripts]
start = "app:app"
